made site mobile responsive

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .works {
     background-color: crimson;
     display: flex;
@@ -9,6 +11,10 @@
         height: 80px;
         position: absolute;
         cursor: pointer;
+
+        @include mobile {
+            display: none;
+        }
 
         &.left {
             left: 100px;
@@ -25,6 +31,12 @@
         position: absolute;
         left: 0;
         transition: all 1s ease-out;
+
+        @include mobile {
+            height: 100vh;
+            flex-direction: column;
+            justify-content: center;
+        }
         
         .container {
             width: 100vw;
@@ -40,6 +52,12 @@
                 display: flex; 
                 align-items: center;
                 justify-content: center;
+
+                @include mobile {
+                    width: 90%;
+                    height: 200px;
+                    margin: 10px 0;
+                }
 
                 .left {
                     flex: 4;
@@ -70,9 +88,17 @@
                         }
                         h2 {
                             font-size: 20px;
+
+                            @include mobile {
+                                font-size: 15px;
+                            }
                         }
                         p {
                             font-size: 13px;
+
+                            @include mobile {
+                                display: none;
+                            }
                         }
                         span {
                             font-size: 12px;
