--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,12 +1,18 @@
+@import "../../global.scss";
+
 .contact {
     background-color: white;
     display: flex;
+
+    @include mobile {
+        flex-direction: column;
+    }
 
     .left {
         flex: 1;
 
         img {
-            height: 100%;
+            height: 80%;
             overflow: hidden;
         }
     }
@@ -35,12 +41,22 @@
             width: 300px;
             height: 30px;
             font-size: 14px;
+
+            @include mobile {
+                width: 200px;
+                height: 20px;
+            }
         }
 
         textarea {
             width: 300px;
             height: 200px;
             font-size: 14px;
+
+            @include mobile {
+                width: 200px;
+                height: 70px;
+            }
         }
 
         button {
