--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -1,11 +1,21 @@
+@import "../../global.scss";
+
 .testimonials {
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    @include mobile {
+        justify-content: space-around;
+    }
+
     h1 {
-        font-style: 50px;
+        font-size: 50px;
+
+        @include mobile {
+            font-size: 20px;
+        }
     }
 
     .container {
@@ -14,6 +24,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        @include mobile {
+            flex-direction: column;
+        }
 
         .card {
             width: 250px;
@@ -26,10 +40,21 @@
             padding: 20px;
             transition: all 1s ease;
 
+            @include mobile {
+                height: 180px;
+                margin: 10px
+            }
+
             &.featured {
                 width: 300px;
                 height: 75%;
                 margin: 0 30px;
+
+                @include mobile {
+                    width: 250px;
+                    height: 180px;
+                    margin: 1px;
+                }
             }
 
             &:hover {
@@ -51,6 +76,11 @@
                         border-radius: 50%;
                         object-fit: cover;
                         margin: 0 30px;
+
+                        @include mobile {
+                            width: 40px;
+                            height: 40px;
+                        }
                     }
                 }
             }
@@ -58,6 +88,11 @@
                 padding: 10px;
                 border-radius: 10px;
                 background-color: rgb(250, 244, 245);
+
+                @include mobile {
+                    font-size: 12px;
+                    padding: 5px;
+                }
             }
             .bottom {
                 display: flex;
@@ -67,9 +102,17 @@
 
                 h3 {
                     margin-bottom: 5px;
+
+                    @include mobile {
+                        font-size: 14px;
+                    }
                 }
                 h4 {
                     color: gray;
+
+                    @include mobile {
+                        font-size: 13px;
+                    }
                 }
             }
         }
