--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -51,24 +51,33 @@
             position: relative;
             transition: all .5s ease;
             cursor: pointer;
+            overflow-y: hidden;
 
             @include mobile {
                 width: 150px;
                 height: 120px;
             }
 
-            h3 {
-                position: absolute;
-                font-size: 20px;
-            }
-
-            img {
-                width: 100%;
+            a{
                 height: 100%;
-                object-fit: cover;
-                z-index: 1;
-            }
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
+                h3 {
+                    position: absolute;
+                    font-size: 20px;
+                    display: none;
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    z-index: 1;
+                    }
+            }
             &:hover {
                 background-color: $mainColor;
                 img {
