fixed works page by adding non-sample data and made projects clickable

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -100,12 +100,16 @@
                                 display: none;
                             }
                         }
-                        span {
-                            font-size: 12px;
-                            font-weight: 600;
-                            text-decoration: underline;
-                            cursor: pointer;
+                        a{
+                            text-decoration: none;
+                            span {
+                                font-size: 12px;
+                                font-weight: 600;
+                                text-decoration: underline;
+                                cursor: pointer;
+                            }
                         }
+
                     }
                 }
                 .right {
